src/manipulator/snapshots/annatto__manipulator__enumerate__tests__fail_deserialization_with_bad_query.snap
---
source: src/manipulator/enumerate.rs
expression: enmatches.err().unwrap()
---
TOML parse error at line 2, column 19
  |
2 |         queries = ["tok", "annis:tok @* doc"]
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error in query 2:
[0:7-0:9] Unexpected token in query. Expected one of: ID
